# xian

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: README.md  main.cpp  main2.cpp  main3.cpp  scene.cpp
src/miao/: CMakeLists.txt  miao.cpp
src/miao/cameras/: camera.cpp  camera.hpp  film.cpp  film.hpp
src/miao/core/: BBox.cpp  BBox.hpp  Interaction.hpp  Matrix4.cpp  Matrix4.hpp  debug.hpp  distribution.cpp  distribution.hpp  geometry.hpp  interaction.hpp  material.cpp  material.hpp  primitive.cpp  primitive.hpp  ray.hpp  rng.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  spectrum.hpp  transform.cpp  transform.hpp  utils.hpp  vec3.hpp
src/miao/ds/: bvh.cpp  bvh.hpp
src/miao/integrators/: common.cpp  common.hpp  integrator.cpp  integrator.hpp  photon.cpp  photon.hpp  ppm.hpp  volumeintegrator.cpp  volumeintegrator.hpp
src/miao/lights/: light.cpp  light.hpp
src/miao/renderers/: progressive.cpp  progressive.hpp
src/miao/volumes/: base.hpp  medium.cpp  medium.hpp
